--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 
 /*Start Animations*/
-@-webkit-keyframes animatetop {
+/* @-webkit-keyframes animatetop {
 	from {
 		top: -300px;
 		opacity: 0;
@@ -46,12 +46,12 @@
 	50% {
 		opacity: 1;
 	}
-}
+} */
 /*End Animations*/
 /*
 -- Start BackGround Animation 
 */
-
+/* 
 .container{
     position: relative;
 }
@@ -172,7 +172,7 @@
 		opacity: 0;
 		border-radius: 50%;
 	}
-}
+} */
 /*
 -- End BackGround Animation 
 */
