--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 
 /*Start Animations*/
-/* @-webkit-keyframes animatetop {
+@-webkit-keyframes animatetop {
 	from {
 		top: -300px;
 		opacity: 0;
@@ -46,21 +46,16 @@
 	50% {
 		opacity: 1;
 	}
-} */
+}
 /*End Animations*/
 /*
 -- Start BackGround Animation 
 */
-/* 
-.container{
-    position: relative;
-}
-
 .area {
-	background: #4e54c8;
-	background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+	background: #0F2976;
+	background: -webkit-linear-gradient(to left, #0F2976, #0F2976);
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	position: absolute;
 	z-index: -1;
 }
@@ -80,7 +75,7 @@
 	list-style: none;
 	width: 20px;
 	height: 20px;
-	background: rgba(255, 255, 255, 0.2);
+	background: rgba(243, 220, 220, 0.2);
 	animation: animate 25s linear infinite;
 	bottom: -150px;
 }
@@ -172,7 +167,4 @@
 		opacity: 0;
 		border-radius: 50%;
 	}
-} */
-/*
--- End BackGround Animation 
-*/
+}
